G1: Improve program flow around incremental collection set building

XMLWordPrintable

    • gc
    • b12

      The code around incremental collection set building is very old, and due to changes like JDK-8343782 changes were done in places that do not really fit

      In detail
      - move implementations of incremental collection set building helpers out of header file
      - _selected_group_cur_length is unnecessary and can be replaced by an (inexpensive) call
      - some members about incremental building updated outside of the start/continue/stop_incremental_build() method
      - assertions around G1CSetBuildType are out of date

      Cleanup.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: