8364925: G1: Improve program flow around incremental collection set building

Reviewed-by: ayang, iwalulya